fixed footer spacing

--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -9,32 +9,37 @@
     background-color: #f18a1a;
 }
 
+.topspacing{
+    grid-row: 1/2;
+    grid-column: 1/5;
+}
+
 .footerTitle{
     font-size: 40px;
-    grid-row: 1/2;
+    grid-row: 2/3;
     grid-column: 2/4;
 }
 
 .phoneNumber{
-    grid-row: 2/3;
-    grid-column: 2/3;
-    align-self: center;
-}
-
-.email{
     grid-row: 3/4;
     grid-column: 2/3;
     align-self: center;
 }
 
-.sendToContact{
+.email{
     grid-row: 4/5;
     grid-column: 2/3;
     align-self: center;
 }
 
+.sendToContact{
+    grid-row: 5/6;
+    grid-column: 2/3;
+    align-self: center;
+}
+
 .checkOutContainer{
-    grid-row: 2/5;
+    grid-row: 3/6;
     grid-column: 3/4;
     display: flex;
     flex-direction: column;
@@ -55,9 +60,15 @@
 }
 
 .footerBackground{
-    grid-row: 1/5;
+    grid-row: 1/7;
     grid-column: 1/5;
     background-color: #f18a1a;
+}
+
+.bottomspacing{
+    grid-row: 6/7;
+    grid-column: 1/5;
+    padding-top: 5%;
 }
 
 .footerLinks{
